# elixir-tokenize

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: tokenize.ex
lib/tokenize/: cli.ex
native/tokenize/: Cargo.toml  README.md
native/tokenize/src/: lib.rs
test/: cli_test.exs  tokenize_test.exs
test/fixtures/: test.txt
