[package]
name = "tokenize"
version = "0.1.0"
authors = []

[lib]
name = "tokenize"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
pipclient-tokenize = {git = "https://github.com/svevang/pipclient-tokenize.git"}
rustler = "0.15.1"
rustler_codegen = "0.15.1"
lazy_static = "0.2"
natural = "0.3.0"

